--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "date-fns": "^4.1.0",
     "pdfkit": "^0.17.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
